--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,3 +16,12 @@ a{
   margin-right: 8px;
   color: inherit;
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
