--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
     font-family:Arial, Helvetica, sans-serif;
 }
-header {
+/* header {
     width: 100%; 
     height: 40px; 
     background-color:brown;
@@ -13,7 +13,7 @@ header {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-}
+} */
 section{
     display: flex;
     flex-direction: column;
